--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,58 @@
-<paste above content>
+# Generate a .gitignore file with standard Python, Node, Docker, and OS-level exclusions
+
+gitignore_content = """
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.egg-info/
+*.egg
+.Python
+env/
+venv/
+ENV/
+build/
+dist/
+
+# Node
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
+ehthumbs.db
+desktop.ini
+
+# Logs
+*.log
+logs/
+
+# Docker
+*.tar
+*.gz
+*.zip
+.dockerignore
+
+# Editor directories and files
+.idea/
+.vscode/
+*.swp
+*~
+
+# Selfix Custom
+my_license.json
+SELFIX_HomeGuard_v1.0.0_linux.zip
+"""
+
+# Save to file
+gitignore_path = "/mnt/data/.gitignore"
+with open(gitignore_path, "w") as f:
+    f.write(gitignore_content.strip())
+
+gitignore_path
